CRITICAL FIX: Resolve half-page layout issue
- Fix Vite's default index.css that was centering the app with flexbox
- Remove display: flex and place-items: center from body that caused layout issues
- Add comprehensive CSS reset with !important rules to override any conflicts
- Fix HTML viewport settings and add inline critical CSS
- Ensure html, body, and #root all take full width and height
- Add overflow-x: hidden to prevent horizontal scrolling
- Update App.css with stronger CSS rules to ensure full-width layout
- This resolves the issue where page was only showing half width

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <title>BookRecommend - Discover Your Next Great Read</title>
+    <style>
+      html, body {
+        width: 100% !important;
+        height: 100% !important;
+        margin: 0 !important;
+        padding: 0 !important;
+        overflow-x: hidden !important;
+      }
+      #root {
+        width: 100% !important;
+        min-height: 100vh !important;
+        margin: 0 !important;
+        padding: 0 !important;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
